--- a/Giros/Views/DrinkPage.xaml
+++ b/Giros/Views/DrinkPage.xaml
@@ -12,47 +12,57 @@
 
 
         <Canvas Background="Transparent" x:Name="appleJuiceCanvas" Height="150" Width="150" Margin="10,10,715,402" MouseLeftButtonDown="appleJuiceBackground" Uid="9">
-            <Image Source="/Resources/images/appleJuice.png" Height="125" Width="125" Canvas.Top="15" Canvas.Left="25"/>
+            <Image Source="/Resources/images/appleJuice.png" Height="115" Width="115" Canvas.Top="15" Canvas.Left="25"/>
+            <Label Content="{DynamicResource Apple Juice}" Canvas.Left="25" Canvas.Top="126"></Label>
         </Canvas>
 
         <Canvas Background="Transparent" x:Name="beerCanvas" Height="150" Width="150" Margin="191,10,534,402" MouseLeftButtonDown="beerBackground" Uid="12">
-            <Image Source="/Resources/images/beer.png" Height="143" Width="143" Canvas.Left="7"/>
+            <Image Source="/Resources/images/beer.png" Height="126" Width="126" Canvas.Left="10 "/>
+            <Label Content="{DynamicResource Beer}" Canvas.Left="56" Canvas.Top="126"></Label>
         </Canvas>
 
         <Canvas Background="Transparent" x:Name="cokeCanvas" Height="150" Width="150" Margin="360,10,365,402" MouseLeftButtonDown="cokeBackground" Uid="1">
-            <Image Source="/Resources/images/coke.png" Height="134" Width="135" Canvas.Top="16" Canvas.Left="10"/>
+            <Image Source="/Resources/images/coke.png" Height="124" Width="125" Canvas.Top="10" Canvas.Left="15"/>
+            <Label Content="{DynamicResource Coke}" Canvas.Left="49" Canvas.Top="126"></Label>
         </Canvas>
 
         <Canvas Background="Transparent" x:Name="exoticKruskaCanvas" Height="150" Width="150" Margin="534,10,191,402" MouseLeftButtonDown="exoticKruskaBackground" Uid="11">
-            <Image Source="/Resources/images/exoticKruska.png" Height="174" Width="140"/>
+            <Image Source="/Resources/images/exoticKruska.png" Height="174" Width="140" Canvas.Top="-24"/>
+            <Label Content="{DynamicResource exoticLimeta}" Canvas.Left="40" Canvas.Top="126"></Label>
         </Canvas>
 
 
         <Canvas Background="Transparent" Name="exoticLimetaCanvas" Height="150" Width="150" Margin="191,190,534,222" MouseLeftButtonDown="exoticLimetaBackground" Uid="10">
             <Image Source="/Resources/images/exoticLimeta.png" Height="180" Width="132" Canvas.Left="10" Canvas.Top="-16"/>
+            <Label Content="{DynamicResource exoticLimeta}" Canvas.Left="41" Canvas.Top="126"></Label>
         </Canvas>
 
 
         <Canvas Background="Transparent" x:Name="fantaCanvas" Height="150" Width="150" Margin="10,190,715,222" MouseLeftButtonDown="fantaBackground" Uid="5">
-            <Image Source="/Resources/images/fanta.png" Height="134" Width="134" Canvas.Top="10" Canvas.Left="10"/>
+            <Image Source="/Resources/images/fanta.png" Height="121" Width="121" Canvas.Top="10" Canvas.Left="19"/>
+            <Label Content="{DynamicResource Fanta}" Canvas.Left="59" Canvas.Top="126"></Label>
         </Canvas>
 
 
         <Canvas Background="Transparent" x:Name="mineralWaterCanvas" Height="150" Width="150" Margin="10,370,715,42" MouseLeftButtonDown="mineralWaterBackground" Uid="3">
-            <Image Source="/Resources/images/mineralWater.png" Height="140" Width="140" Canvas.Top="10"/>
+            <Image Source="/Resources/images/mineralWater.png" Height="131" Width="131" Canvas.Top="10" Canvas.Left="9"/>
+            <Label Content="{DynamicResource mineralWater}" Canvas.Left="43" Canvas.Top="126"></Label>
         </Canvas>
 
         <Canvas Background="Transparent" x:Name="pepsiCanvas" Height="150" Width="150" Margin="360,190,365,222" MouseLeftButtonDown="pepsiBackground" Uid="2">
-            <Image Source="/Resources/images/pepsi.png" Height="125" Width="125" Canvas.Top="10" Canvas.Left="15"/>
+            <Image Source="/Resources/images/pepsi.png" Height="125" Width="125" Canvas.Top="-4" Canvas.Left="10"/>
+            <Label Content="{DynamicResource Coke}" Canvas.Left="50" Canvas.Top="121"></Label>
         </Canvas>
 
 
         <Canvas Background="Transparent" x:Name="regularWaterCanvas" Height="150" Width="150" Margin="534,190,191,222" MouseLeftButtonDown="regularWaterBackground" Uid="4">
-            <Image Source="/Resources/images/regularWater.png" Height="125" Width="125" Canvas.Top="15" Canvas.Left="10"/>
+            <Image Source="/Resources/images/regularWater.png" Height="114" Width="114" Canvas.Top="10" Canvas.Left="18"/>
+            <Label Content="{DynamicResource regularWater}" Canvas.Left="39" Canvas.Top="123"></Label>
         </Canvas>
 
         <Canvas Background="Transparent" x:Name="orangeJuiceCanvas" Height="150" Width="150" Margin="191,370,534,42" MouseLeftButtonDown="orangeJuiceBackground" Uid="8">
-            <Image Source="/Resources/images/orangeJuice.png" Height="125" Width="125" Canvas.Top="15" Canvas.Left="10"/>
+            <Image Source="/Resources/images/orangeJuice.png" Height="116" Width="116" Canvas.Top="10" Canvas.Left="24"/>
+            <Label Content="{DynamicResource orangeJuice}" Canvas.Left="29" Canvas.Top="126"></Label>
         </Canvas>
 
 
